Migrate to java 17 String.format() to formatted() and text blocks
OpenRewrite