@@ -677,7 +677,7 @@ public class Encoder extends SourceCodeGenerator {
       }
     }
     final String paramType = parameter.getValueType().getName().toLowerCase();
-    final String message = String.format("Unable to read label from parameter on method: %s\nUsing the type as label: %s\nGenerated code may contain errors.", parameter.getCode().toString(), paramType);
+    final String message = "Unable to read label from parameter on method: %s\nUsing the type as label: %s\nGenerated code may contain errors.".formatted(parameter.getCode().toString(), paramType);
     //TODO I18n
     Dialogs.showError("Unlabeled parameter", message);
     Logger.errln(message);
