@@ -255,7 +255,7 @@ public class BasicTreeViewer extends JPanel implements TreeSelectionListener {
       );
       String colorString = "NO COLOR";
       if (node.color != null) {
-        colorString = String.format("%.2f, %.2f, %.2f, %.2f", node.color.red, node.color.green, node.color.blue, node.color.alpha);
+        colorString = "%.2f, %.2f, %.2f, %.2f".formatted(node.color.red, node.color.green, node.color.blue, node.color.alpha);
         Color backgroundColor = new Color((int) (node.color.red * 255), (int) (node.color.green * 255), (int) (node.color.blue * 255));
         this.colorLabel.setBackground(backgroundColor);
         this.colorLabel.setOpaque(true);
@@ -284,7 +284,7 @@ public class BasicTreeViewer extends JPanel implements TreeSelectionListener {
     if (node instanceof SceneGraphTreeNode sgNode) {
       String positionString = "NO POSITION";
       if (sgNode.absoluteTransform != null) {
-        positionString = String.format("[%.3f, %.3f, %.3f]", sgNode.absoluteTransform.translation().x(), sgNode.absoluteTransform.translation().y(), sgNode.absoluteTransform.translation().z());
+        positionString = "[%.3f, %.3f, %.3f]".formatted(sgNode.absoluteTransform.translation().x(), sgNode.absoluteTransform.translation().y(), sgNode.absoluteTransform.translation().z());
       }
       this.transformLabel.setText(positionString);
       if (sgNode.stackTrace != null) {
@@ -326,7 +326,7 @@ public class BasicTreeViewer extends JPanel implements TreeSelectionListener {
         } else {
           this.isShowingLabel.setText("NOT SHOWING");
         }
-        String opacityString = String.format("%.2f", sgNode.opacity);
+        String opacityString = "%.2f".formatted(sgNode.opacity);
         this.opacityLabel.setText(opacityString);
       }
 
